SAI-1617 Fixed some Java 11 deprecations and warnings